Database created and connected to the project

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "HepsiNeredeDBContext": "Data Source=Data/hepsinerede.db"
   }
 }
