Architectural changes for test cases and better management. Unit Tests wrote basically

--- a/HepsiNerede.WebApp/appsettings.Development.json
+++ b/HepsiNerede.WebApp/appsettings.Development.json
@@ -5,8 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HepsiNeredeDBContext": "Data Source=Data/hepsinerede.db"
+    "HepsiNeredeDBContext": "Data Source=../Database/hepsinerede.db"
   }
 }
