--- a/HepsiNerede.WebApp/appsettings.json
+++ b/HepsiNerede.WebApp/appsettings.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HepsiNeredeDBContext": "Data Source=Data/hepsinerede.db"
+    "HepsiNeredeDBContext": "Data Source=../Database/hepsinerede.db"
   }
 }
