Add CreatedAt property to BaseModel and modify AddProduct method in ProductRepository

--- a/HepsiNerede.WebApp/HepsiNerede.WebApp.csproj
+++ b/HepsiNerede.WebApp/HepsiNerede.WebApp.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HepsiNerede.Data\HepsiNerede.Data.csproj" />
+    <ProjectReference Include="..\HepsiNerede.Models\HepsiNerede.Models.csproj" />
+    <ProjectReference Include="..\HepsiNerede.Services\HepsiNerede.Services.csproj" />
   </ItemGroup>
 
 </Project>
