product and campaign implementation done. Refactor and fix circle dependency bugs.

--- a/HepsiNerede.WebApp/appsettings.Development.json
+++ b/HepsiNerede.WebApp/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "HepsiNeredeDBContext": "Data Source=../Database/hepsinerede.db"
+    "HepsiNeredeDBContext": "Data Source=hepsinerede.db"
   }
 }
