--- a/HepsiNerede.WebApp/appsettings.json
+++ b/HepsiNerede.WebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HepsiNeredeDBContext": "Data Source=../Database/hepsinerede.db"
+    "HepsiNeredeDBContext": "Data Source=hepsinerede.db"
   }
 }
