--- a/tests/HepsiNerede.Tests/HepsiNerede.Tests.csproj
+++ b/tests/HepsiNerede.Tests/HepsiNerede.Tests.csproj
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HepsiNerede.Application\HepsiNerede.Application.csproj" />
-    <ProjectReference Include="..\HepsiNerede.Domain\HepsiNerede.Domain.csproj" />
-    <ProjectReference Include="..\HepsiNerede.Infrastructure\HepsiNerede.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\HepsiNerede.Application\HepsiNerede.Application.csproj" />
+    <ProjectReference Include="..\..\src\HepsiNerede.Domain\HepsiNerede.Domain.csproj" />
+    <ProjectReference Include="..\..\src\HepsiNerede.Infrastructure\HepsiNerede.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
